# chocolate-doom

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: config.hpp.cin
include/doom/: english.hpp  main.hpp  stat.hpp  system.hpp
include/doom/dehacked/: strings.hpp
include/doom/miscellaneous/: argv.hpp  config.hpp
include/doom/system/: video.hpp
src/: main.cpp  stat.cpp  system.cpp
src/dehacked/: strings.cpp
src/miscellaneous/: argv.cpp  config.cpp
src/system/: main.cpp  video.cpp
